--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mui/material": "^5.15.4",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-social-media-embed": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
